--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -5,7 +5,11 @@
        
     </head>
     <body>
-       
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+            <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+            <a href="{% url 'recipe_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            
         <div class="recipes">
            
                 {% block content %}
