--- a/blog/templates/recipe_list.html
+++ b/blog/templates/recipe_list.html
@@ -1,15 +1,36 @@
 {% extends 'home_page.html' %}
 
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-            <h1><a href="">{{ post.recipe_name }}</a></h1>
-            <p>{{ post.description|linebreaksbr }}</p>
-            <!-- {% if post.description|length>100 %}
-            {% endif %} -->
-        </div>
+{% for post in post %}
+<div class="post">
+   
+    <h1><a href="{% url 'recipe_detail' pk=post.pk %}">{{ post.recipe_name }}</a></h1>
+    {% if post.image %}
+    <img class="recipe-image" src="{{post.image.url}}" alt="Recipe image" width="193" height="130">
+    
+    {% endif %}
+
+    <p>{{ post.description|linebreaksbr|slice:":70" }}
+        {% if post.description|length > 70 %}
+        ...
+        {% endif %}
+
+</div>
+<div class="date">
+        {{ post.created_date|date:"d/m/o" }}
+    </div>
+    <p>by {{post.author}}</p>
+    <p><a href="{% url 'recipe_edit' pk=post.pk %}">edit</a></p>
     {% endfor %}
+<button class="btn" type="submit">Previous Page</button>
+
+<p>Total {{number_post}} Recipes</p>
+<button class="btn" type="submit">Next Page</button>
+
+<form class="form-inline my-2 my-lg-0">
+    <h1>Search</h1>
+    <input class="form-control mr-sm-2" type="search" placeholder="ingredients, dish, keyword..."
+        aria-label="ingredients, dish, keyword" name="search">
+    <button class="btn" type="submit">Submit</button>
+</form>
 {% endblock %}
