--- a/blog/templates/recipe_detail.html
+++ b/blog/templates/recipe_detail.html
@@ -6,29 +6,26 @@
 <h1>{{ post.recipe_name }}</h1>
 <div class="post">
     <p>{{post.author}}</p>
-    {% if post.created_date %}
-
-    {{ post.created_date }}
-
-    {% endif %}
-    {% for value, text in form.providers.field.choices %}
-    <!-- <div class="ui slider checkbox">
-        <input id="id_providers_{{ forloop.counter0 }}" name="{{ form.providers.name }}" type="checkbox"
-            value="{{ value }}" {% if value in checked_providers %} checked="checked" {% endif %}>
-        <label>{{ text }}</label>
-    </div> -->
-    {% endfor %}
+  
+    
+    
     <p>{{post.level}}</p>
 
-    {% if post.created_date %}
+   
     <div class="date">
         {{ post.created_date|date:"d/m/o" }}
     </div>
-    {% endif %}
+   
     {% if post.image %}
     <img class="recipe-image" src="{{post.image.url}}" alt="Recipe image" width="193" height="130">
 
     {% endif %}
+    <ul>
+        {% for ing in post.ingredients.all %}
+        <li>{{ ing.name }}</li>
+        {% endfor %}
+        
+        </ul>
     <p>{{ post.description }}</p>
 </div>
 {% endblock %}
