--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -5,18 +5,27 @@
        
     </head>
     <body>
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-            <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-            <!-- <a href="{% url 'recipe_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a> -->
-            
+            <meta http-equiv="content-type" content="text/plain; charset=utf-8" />
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+                    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
+            <div class = "grid-container">
             <div class="menu">
-            <a href="{% url 'recipe_list' %}">recipe.com</a>
-            <a href="{% url 'recipe_new' %}">Share a Recipe</a>
-            <!-- <a href="">Logout</a> -->
-            <a href="/admin/logout/">Log out</a>
+<ul>
+          <li><a href="{% url 'recipe_list' %}">recipe.com</a></li>  
             
-            {{request.user.username}}
+          <li><a href="{% url 'recipe_new' %}">Share a Recipe</a></li>
+            <!-- <a href="">Logout</a> -->
+
+            <li> {{request.user.username}}</li>
+
+            <li><a href="/admin/logout/">Log out</a></li>
+            
+        </ul>
             </div>
         <div class="recipes">
            
@@ -25,5 +34,7 @@
                 </div>
             </div>
         </div>
+    
+    </div>
     </body>
 </html>
