--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1,5 +1,13 @@
 
-
+/* .container {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px;
+    grid-template-rows: auto;
+    grid-template-areas: 
+      "header header header header"
+      "main main . sidebar"
+      "footer footer footer footer";
+  } */
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -163,3 +171,47 @@ text-decoration: none;
     font-size: 20px;
     text-align: center;
 }
+.ingredient-top{
+   grid-area: sidebar;
+   margin-top: 200px;
+   font-size: 15px;
+   color:blue;
+
+}
+.ingredient-top>p{
+
+    font-size: 16px;
+    font-weight: bold;
+    color:black;
+    
+}
+/* .grid-container{
+
+    display:grid;
+    grid-template-columns: 150px auto ;
+    grid-gap:20px;
+    grid-gap: 10px;
+    padding: 10px;
+}
+
+.menu{
+    background-color: #333;
+    height: 50px;
+    font-size: 20px;
+    text-align: initial;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    
+}
+.menu>ul>li{
+    display: inline;
+    color : white;
+
+}
+.menu>ul>li>a{
+    display: inline;
+    color : white;
+
+} */
