--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -72,10 +72,10 @@
     text-decoration: none;
     }
 
-.abc>p>a{
+.recipe-info>p>a{
         text-decoration: none;
     }
-.abc>p{
+.recipe-info>p{
     display: inline;
 }
 .pagination{
@@ -89,17 +89,7 @@
     
 }
 
-.search-form{
-    grid-area: sidebar;
-    margin-right: 300px;
-    grid-row-start:2;
-    grid-row-end: 3;
-    
 
-}
-.search-form>buttonn{
-    color:white;
-}
 
 .btn{
     color: black;
@@ -171,47 +161,41 @@ text-decoration: none;
     font-size: 20px;
     text-align: center;
 }
+
+.sidebar{
+    grid-area: sidebar;
+    margin-right: 200px;
+    grid-row-start:2;
+    grid-row-end: 4;
+    
+    
+}
+.search-form{
+    
+    width: 70%;
+    padding-left:20px;
+}
+
+
+.search-button{
+    
+    margin-top:10px;
+    font-size:15px;
+    float: right;
+    }
 .ingredient-top{
-   grid-area: sidebar;
-   margin-top: 200px;
-   font-size: 15px;
+   
+   margin-top: 100px;
+   font-size: 20px;
    color:blue;
+   
+  
 
 }
 .ingredient-top>p{
 
-    font-size: 16px;
+    font-size: 25px;
     font-weight: bold;
     color:black;
     
 }
-/* .grid-container{
-
-    display:grid;
-    grid-template-columns: 150px auto ;
-    grid-gap:20px;
-    grid-gap: 10px;
-    padding: 10px;
-}
-
-.menu{
-    background-color: #333;
-    height: 50px;
-    font-size: 20px;
-    text-align: initial;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    
-}
-.menu>ul>li{
-    display: inline;
-    color : white;
-
-}
-.menu>ul>li>a{
-    display: inline;
-    color : white;
-
-} */
